--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -20,7 +20,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "#",
+          "connectionString": "Server=tcp:ferasfdev.database.windows.net,1433;Initial Catalog=StudentTestDB;Persist Security Info=False;User ID=ferasf;Password=Contraseña2025*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "columnOptionsSection": {
@@ -59,7 +59,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "#"
+    "DefaultConnection": "Server=tcp:ferasfdev.database.windows.net,1433;Initial Catalog=StudentTestDB;Persist Security Info=False;User ID=ferasf;Password=Contraseña2025*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "clave_super_secreta_123!_muy_larga_para_jwt_256_bits_minimo_requerido",
